Fixed gls in titles and pesky table issues

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -243,7 +243,7 @@ Secondly is that it is emerging that different membranes have different thicknes
 \begin{figure}[ht]
 \centering
 \includegraphics[width=1\textwidth]{Intro/Helix_anatomy}
-		\captionof{figure}[A cartoon showing the general components of the membrane and a typical TMH.]{\textbf{A cartoon showing the general components of the membrane and a typical TMH}.
+		\captionof{figure}[A cartoon showing the general components of the membrane and a typical transmembrane helix.]{\textbf{A cartoon showing the general components of the membrane and a typical transmembrane helix}.
 		The example used here for illustrative purposes is the transmembrane region of therein (\gls{pdb} 2LK9)~\cite{Skasko2012}.
 		Dark grey areas denote the area of lipid head groups.
 		The residues found in these areas are often described as flanking regions and are often in contact with the aqueous interface of the membrane.
@@ -384,7 +384,7 @@ These peaks correspond with the ``simple'' and ``complex'' \gls{tmh} annotation.
 \begin{figure}[ht]
 \centering
 \includegraphics[width=1\textwidth]{Intro/complexity}
-		\captionof{figure}[The hydrophobic\--complexity continuum distinguishes between \gls{tmh} anchors and those with function beyond anchoring.]{\textbf{The hydrophobic\--complexity continuum distinguishes between \gls{tmh} anchors and those with function beyond anchoring.}
+		\captionof{figure}[The hydrophobic\--complexity continuum distinguishes between transmembrane helix anchors and those with function beyond anchoring.]{\textbf{The hydrophobic\--complexity continuum distinguishes between transmembrane helix anchors and those with function beyond anchoring.}
 		A) Two distinct points can be observed when plotting sequence complexity on the x\--axis, frequency on the y\--axis, and hydrophobicity on the z\--axis of \gls{tmh}s from UniProt.
 		These peaks were shown to correspond to the membrane anchor and functional \gls{tmh} populations.
 		From Wong \textit{et al.,} 2011 \cite{Wong2011}.
