--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -30,7 +30,7 @@ The prevailing idea about membrane insertion by the translocon is that the \gls{
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=1\textwidth]{multipass-folding/sequential-insertion}
-        \captionof{figure}[A cartoon showing the generally accepted schematic of sequential multipass TMH insertion into the membranes.]{\textbf{A cartoon showing the generally accepted schematic of sequential multipass TMH insertion into the membranes.}
+        \captionof{figure}[A cartoon showing the generally accepted schematic of sequential multipass transmembrane helix insertion into the membranes.]{\textbf{A cartoon showing the generally accepted schematic of sequential multipass transmembrane helix insertion into the membranes.}
         The two key concepts are that one at a time, the TMHs emerge from the ribosome into the translocon.
         This appearance of hydrophobicity triggers the lateral gate to open.
         As the nascent TMH is exposed to the membrane, it begins to partition.
@@ -84,7 +84,7 @@ These proteins have a lumenal plug~\cite{Tam2005, Junne2006} and a constricted c
 During translocation the plug moves out of the pore \cite{Li2016}, the channel is in an open unconstricted state \cite{Junne2010}, and a lateral gate of TMH2 and TMH7 \cite{Berg} periodically opens to release a \gls{tmh} to the membrane environment if sufficient hydrophobicity is detected in the peptide chain \cite{Junne2010, Egea2010}(Figure \ref{fig:sequential-insertion}).
 
 
-\subsection{Co-operative TMH insertion by the translocon-ribosome complex.}
+\subsection{Co-operative transmembrane helix insertion by the translocon-ribosome complex.}
 
 Early evidence of secondary structure folding of the Kv ion channel showed that the S6 (referred to later in this study as TMH6) is indeed compacted in the ribosomal tunnel by using pegylation and calmodulation of the tagged cysteine-scanned S6 transmembrane segment \cite{Lu2005}.
 Furthermore, accessibility assays and an improved intramolecular  cross\--linking assay showed that the helical transmembrane S3b–S4 hairpin (the “paddle”) of a voltage-gated potassium (Kv) forms in the ribosome tunnel \cite{Tu2014}.
@@ -130,7 +130,7 @@ Only families with a total N \textgreater  20 were included in the analysis, for
 \begin{table}[htbp]
 
   \centering
-  \captionof{table}[Dataset sizes of common TMP families of transporters and channels.]{\textbf{Dataset sizes of common TMP families of transporters and channels.}
+  \captionof{table}[Dataset sizes of common transmembrane protein families of transporters and channels.]{\textbf{Dataset sizes of common transmembrane protein families of transporters and channels.}
   The type column refers to the family name.
   The keyword identifier column refers to the specific query term that UniProt uses as the controlled vocabulary identifier.
   UniProt hits refers to the number of SwissProt hits, which are manually curated, however, the SwissProt and TrEMBL hits are also given in the brackets.
@@ -141,22 +141,22 @@ Only families with a total N \textgreater  20 were included in the analysis, for
 \footnotesize
 \begin{tabular}{lllllll}
 
-Type                     & Query & UniProt Hits   & UniRef &  Records & TMHs & Final hits \\
-Ion channel              & KW-0407            & 2452 (176417)  & 912 (21024)            & 882                & 4    & 234        \\
-                         &                    &                &                        &                    & 6    & 188        \\
-                         &                    &                &                        &                    & 24   & 34         \\
-Ligand-gated ion channel & KW-1071            & 452 (14051)    & 189 (3055)             & 185                & 6    & 33         \\
-Voltage\--gated channel    & KW-0851            & 683 (27,662)   & 285 (3876)             & 267                & 6    & 97         \\
-Calcium channel          & KW-0107            & 272 (5056)     & 128 (1003)             & 120                & 6    & 38         \\
-Potassium channel        & KW-0631            & 337 (11852)    & 160 (1893)             & 152                & 6    & 88         \\
-Sugar transport          & KW-0762            & 1217 (107721)  & 467 (16748)            & 464                & 12   & 134        \\
-Chloride channel         & KW-0869            & 303 (3697)     & 117 (1039)             & 117                & 4    & 50         \\
-Ion transport            & KW-0406            & 10264 (443600) & 3070 (42259)           & 3023               & 4    & 338        \\
-                         &                    &                &                        &                    & 6    & 390        \\
-                         &                    &                &                        &                    & 8    & 162        \\
-                         &                    &                &                        &                    & 10   & 189        \\
-                         &                    &                &                        &                    & 12   & 292        \\
-                         &                    &                &                        &                    & 24   & 35
+  Type                     & KW & UniProt Hits   & UniRef &  Records & TMHs & Final hits \\
+  Ion channel              & 0407            & 2452 (176417)  & 912 (21024)            & 882                & 4    & 234        \\
+                           &                    &                &                        &                    & 6    & 188        \\
+                           &                    &                &                        &                    & 24   & 34         \\
+  Ligand-gated ion channel & 1071            & 452 (14051)    & 189 (3055)             & 185                & 6    & 33         \\
+  Voltage\--gated channel    & 0851            & 683 (27,662)   & 285 (3876)             & 267                & 6    & 97         \\
+  Calcium channel          & 0107            & 272 (5056)     & 128 (1003)             & 120                & 6    & 38         \\
+  Potassium channel        & 0631            & 337 (11852)    & 160 (1893)             & 152                & 6    & 88         \\
+  Sugar transport          & 0762            & 1217 (107721)  & 467 (16748)            & 464                & 12   & 134        \\
+  Chloride channel         & 0869            & 303 (3697)     & 117 (1039)             & 117                & 4    & 50         \\
+  Ion transport            & 0406            & 10264 (443600) & 3070 (42259)           & 3023               & 4    & 338        \\
+                           &                    &                &                        &                    & 6    & 390        \\
+                           &                    &                &                        &                    & 8    & 162        \\
+                           &                    &                &                        &                    & 10   & 189        \\
+                           &                    &                &                        &                    & 12   & 292        \\
+                           &                    &                &                        &                    & 24   & 35
 \end{tabular}
 \label{table:datasetsizes}
 \end{table}
@@ -213,7 +213,7 @@ All these tests were performed using the Python scipy package \cite{Oliphant2007
 
 \section{Results and discussion}
 
-\subsection{Large contrasts in TMH hydrophobicity occurs in channels and receptors.}
+\subsection{Large contrasts in transmembrane helix hydrophobicity occurs in channels and receptors.}
 In order to identify which type of \gls{tmp} may contain potentially cooperative \gls{tmh}s, the hydrophobicities for \gls{tmh}s from 30045 records in a non-redundant version of SwissProt were calculated according to the Kyte \& Dolittle hydropathy scale \cite{Kyte1982}.
 The absolute difference between each sequentially adjacent \gls{tmh} was calculated.
 The full list, along with the 0.1\% \gls{tmh} pair were submitted to PANTHER \cite{Mi2017}.
@@ -225,7 +225,7 @@ All these lists were predominantly made up of \gls{gpcr}s.
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=1\textwidth]{multipass-folding/good-bad-ontology}
-		\captionof{figure}[Pie charts of a non-redundant list of TMPs compared to a list of TMPs containing the most hydrophobically different TMH pais.]{\textbf{Pie charts of a non-redundant list of TMPs compared to a list of TMPs containing the most hydrophobically different TMH pairs.}
+		\captionof{figure}[Pie charts of a non-redundant list of transmembrane proteins compared to a list of transmembrane proteins containing the most hydrophobically different transmembrane helix pairs.]{\textbf{Pie charts of a non-redundant list of transmembrane proteins compared to a list of transmembrane proteins containing the most hydrophobically different transmembrane helix pairs.}
     The output of PANTHER Gene ontology server of A) a non-redundant list of all TMPs in SwissProt and
     B) a list of the TMPs with the highest (0.1\%) hydrophobic discrepancy between adjacent TMHs.
     Note that the proportions of binding TMPs stay roughly the same, receptors and signal transducers reduce slightly, catalytic proteins are reduced by two thirds and transporter more than doubles in proportion.
@@ -253,7 +253,7 @@ PDB codes 1u19 (rhodopsin) \cite{Okada2004}, 2z73 (rhodopsin) \cite{Murakami2008
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=1\textwidth]{multipass-folding/GPCR-structures}
-		\captionof{figure}[The hydrophobicity and complexity of GPCR TMHs.]{\textbf{The hydrophobicity and complexity of GPCR TMHs.}
+		\captionof{figure}[The hydrophobicity and complexity of GPCR transmembrane helices.]{\textbf{The hydrophobicity and complexity of GPCR transmembrane helices.}
     A) A cartoon of 7 structurally aligned \gls{gpcr}s of various molecular functions coloured according to the residue sequence position.
     Blue is the N terminal residue, working through the rainbow until red at the C terminal position.
     B) The same 7 \gls{gpcr}s aligned structurally but instead coloured by the Eisenberg hydrophobic scale \cite{Eisenberg1984} at 50\% transparency with red being hydrophobic and white being polar.
@@ -311,7 +311,7 @@ But there is still a real statistical difference between TMH6 and TMH7 (Welch's 
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=1\textwidth]{multipass-folding/KD-GPCR}
-		\captionof{figure}[The hydrophobicity of TMHs in GPCR subfamilies.]{\textbf{The hydrophobicity of TMHs in GPCR subfamilies.}
+		\captionof{figure}[The hydrophobicity of transmembrane helices in GPCR subfamilies.]{\textbf{The hydrophobicity of transmembrane helices in GPCR subfamilies.}
     Violin plots of the Kyte \& Doolittle hydrophobicity \cite{Kyte1982} of \gls{tmh}s of \gls{gpcr}s after selecting a non-exhaustive sample of \gls{gpcr} subfamilies with a wide variety of molecular functions.
     A) Opsins (N=39).
     B) Frizzled-smooth \gls{gpcr}s (N=38).
@@ -333,7 +333,7 @@ Although artificially extending the C-terminal did not result in the release of 
 Since lowering the difference in hydrophobicity between TMH6 and TMH7 impedes efficient insertion of the \gls{gpcr} \cite{Ismail2008}, that one would expect the terminal \gls{tmh} to be more hydrophobic rather than relatively polar \cite{Virkki2014}, and that this hydrophobic difference is high conserved throughout \gls{gpcr}s generally (Figure \ref{fig:GPCR-structures}F), and especially in many of the subfamilies(Figure \ref{fig:KD-GPCR}A, C, D, F), we believe that the hydrophobic difference of TMH6 and TMH7 is highly important to the biogenesis of \gls{gpcr}s. This is evidence for widespread biologically employed \gls{tmh} cooperation during translocation of a typically hydrophobic \gls{tmh} remaining in association with the translocon until the relatively polar \gls{tmh} is processed by the insertion machinery.
 
 
-\subsection{6TMH ion channels contain polar-hydrophobic TMH pairs/groups indicative of conserved cooperative insertion}
+\subsection{6TMH ion channels contain polar-hydrophobic transmembrane helix pairs/groups indicative of conserved cooperative insertion}
 
 Another group of proteins that featured heavily on the list of top \gls{tmh} pairs with a high hydrophobic discrepancy was ion channels (Figure \ref{fig:good-bad-ontology}B).
 Ion channels are a much more structurally varied class of \gls{tmp} than \gls{gpcr}s, varying greatly in their number of \gls{tmh}s, so a summary structural alignment equivalent to Figure \ref{fig:GPCR-structures}A, B, and C was not possible.
@@ -350,7 +350,7 @@ They achieve this in part because the previous \gls{tmh}s,  TMH1 and TMH2, form 
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=0.9\textwidth]{multipass-folding/KD-ion-channels}
-		\captionof{figure}[The hydrophobicity of TMHs in ion channels.]{\textbf{The hydrophobicity of TMHs in ion channels.}
+		\captionof{figure}[The hydrophobicity of transmembrane helices in ion channels.]{\textbf{The hydrophobicity of transmembrane helices in ion channels.}
     A) The Kyte \& Doolittle \gls{tmh} hydrophobicity of \gls{tmh}s according to their \gls{tmh} number of the 6TMH class of ion channels.
     N=188 (The total number of \gls{tmh}s analysed is 1128).
     The data is presented as a violin plot.
@@ -398,7 +398,7 @@ All the scales however corroborate the large hydrophobic difference between TMH4
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=1\textwidth]{multipass-folding/ion-channel-hydrophobicity-verification}
-  \captionof{figure}[The hydrophobic difference observed between TMH4 and it's neighbouring TMHs in 6TMH ion channels is not due to the choice of hydrophobic scale.]{\textbf{The hydrophobic difference observed between TMH4 and it's neighbouring TMHs in 6TMH ion channels is not due to the choice of hydrophobic scale.}
+  \captionof{figure}[The hydrophobic difference observed between TMH4 and the neighbouring transmembrane helices in 6TMH ion channels is not due to the choice of hydrophobic scale.]{\textbf{The hydrophobic difference observed between TMH4 and the neighbouring transmembrane helices in 6TMH ion channels is not due to the choice of hydrophobic scale.}
   Three different scales were applied to the same dataset used in figure \ref{fig:KD-ion-channels}A to verify the observed differences were not caused by the choice of scale.
   A) The White and Wimley biophysical scale \cite{White1999}
   B) The Eisenberg consensus scale \cite{Eisenberg1984}.
@@ -429,7 +429,7 @@ This is compounded by the fact that the White and Wimley scale (used to generate
 \end{figure}
 
 
-\subsection{The prevalance of the high hydrophobic discrepancy of TMHs amongst other common ``transporter'' TMP classes.}
+\subsection{The prevalance of the high hydrophobic discrepancy of transmembrane helices amongst other common ``transporter'' transmembrane protein classes.}
 
 Whilst the gene ontology recognises ``transporters'' as having disproportionately more highly different hydrophobic sequential pairs, the list is predominantly ion channels, which are molecularly and functionally different from ion transporters.
 It also appears that ion transporters have no conserved hydrophobicity discrepancy between any of their \gls{tmh}s for the 4TMH, 6TMH, 8TMH, or 10TMH classes (Figure \ref{fig:other-groups-good-bad} C, D, E, F, G).
@@ -437,7 +437,7 @@ It also appears that ion transporters have no conserved hydrophobicity discrepan
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=0.8\textwidth]{multipass-folding/other-groups-good-bad}
-		\captionof{figure}[High polarity discrepancy between sequentially adjacent TMHs is not present in all TMP transporter families.]{\textbf{High polarity discrepancy between sequentially adjancent TMHs is not present in all TMP transporter families.}
+		\captionof{figure}[High polarity discrepancy between sequentially adjacent transmembrane helices is not present in all transmembrane protein transporter families.]{\textbf{High polarity discrepancy between sequentially adjancent transmembrane helices is not present in all transmembrane protein transporter families.}
     The mean average Kyte \& Doolittle hydrophobic scores of a \gls{tmh}s from various families and classes of membrane transporter proteins.
     Datasets are represented as a violin plot where thickness denotes the relative density of the population distribution.
     A) A dataset of  134 sugar transporters containing 12 \gls{tmh}s.
@@ -468,7 +468,7 @@ There is evidence to suggest that multipass \gls{tmh} arrangements work cooperat
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=1\textwidth]{multipass-folding/Good-bad-TMH}
-		\captionof{figure}[A cartoon of potential cooperative TMH insertion methods.]{\textbf{A cartoon of potential cooperative TMH insertion methods.}
+		\captionof{figure}[A cartoon of potential cooperative transmembrane helix insertion methods.]{\textbf{A cartoon of potential cooperative transmembrane helix insertion methods.}
     A) Typically hydrophobic \gls{tmh}s remain in association with the translocon machinery until the marginally hydrophobic \gls{tmh} is released into the membrane.
     This was observed in an opsin protein \cite{Ismail2008}.
     B) \gls{tmh}\--\gls{tmh} interactions allow the marginally hydrophobic \gls{tmh} to shield the polar residues.
