--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -115,7 +115,7 @@ Data-sets and programs used in this work can be downloaded from \url{http://mend
 \begin{table}[htbp]
 
   \centering
-  \captionof{table}[Acidic residues are rarer in~\gls{tmh}s of single-pass proteins than in~\gls{tmh}s of multi-pass proteins]{\textbf{Acidic residues are rarer in~\gls{tmh}s of single-pass proteins than in~\gls{tmh}s of multi-pass proteins}The statistical results when comparing the number of acidic residues in single-pass or multi-pass~\gls{tmh}s within their database-defined limits and excluding any flanks.
+  \captionof{table}[Acidic residues are rarer in transmembrane helices of single-pass proteins than in transmembrane helices of multi-pass proteins.]{\textbf{Acidic residues are rarer in transmembrane helices of single-pass proteins than in transmembrane helices of multi-pass proteins.}The statistical results when comparing the number of acidic residues in single-pass or multi-pass~\gls{tmh}s within their database-defined limits and excluding any flanks.
   The number of helices per dataset can be found in Table~\ref{table:negativeskewsinglepass} for single-pass~\gls{tmh}s and Table 3 for multi-pass helices.
   $\mu$ SP is the average number of the respective residues per helix in~\gls{tmh}s from single-pass proteins, while $\mu$ MP is the average number of the respective residues per~\gls{tmh} from multi-pass proteins.
   The Kruskal-Wallis test scores (H statistics) were calculated for the numbers of aspartic acid and glutamic acid residues in each helix from single-pass and the number of aspartic acid and glutamic acid residues in each helix from multi-pass~\gls{tmh}s}
@@ -160,7 +160,7 @@ In Figure 1 where we plot the total abundance of all amino acid types in single-
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=1\textwidth]{NNI_chapter/amino_acid_distribution}
-\captionof{figure}[Negatively charged amino acids are amongst the rarest residues in~\gls{tmh}s and $\pm$5 flanking residues.] {\textbf{Negatively charged amino acids are amongst the rarest residues in~\gls{tmh}s and $\pm$5 flanking residues.}Bar charts of the abundance of each amino acid type in the~\gls{tmh}s with flank lengths of the accompanying $\pm$5 residues from the (a) UniHuman single-pass proteins, (b) ExpAll single-pass proteins, (c) UniHuman multi-pass proteins, and (d) ExpAll multi-pass proteins.
+\captionof{figure}[Negatively charged amino acids are amongst the rarest residues in transmembrane helices and $\pm$5 flanking residues.] {\textbf{Negatively charged amino acids are amongst the rarest residues in transmembrane helices and $\pm$5 flanking residues.} Bar charts of the abundance of each amino acid type in the~\gls{tmh}s with flank lengths of the accompanying $\pm$5 residues from the (a) UniHuman single-pass proteins, (b) ExpAll single-pass proteins, (c) UniHuman multi-pass proteins, and (d) ExpAll multi-pass proteins.
 Amino acid types on the horizontal axis are listed in descending count.
 The bars were coloured according to categorisations of hydrophobic, neutral and hydrophilic types according to the free energy of insertion biological scale~\cite{Hessa2005}.
 Grey represents hydrophilic amino acids that were found to have a positive $\Delta$G app, and blue represents hydrophobic residues with a negative $\Delta$G app, purple denotes negative residues and positive residues are coloured in orange.
@@ -203,7 +203,7 @@ Yet, it becomes apparent that any bias in the occurrence of the much rarer acidi
 \begin{figure}[p]
 \centering
 \includegraphics[width=1\textwidth]{NNI_chapter/single_pass_charge_distribution}
-\captionof{figure}[Relative percentage normalisation reveals a negative-outside bias in~\gls{tmh}s from single-pass protein datasets.]{\textbf{Relative percentage normalisation reveals a negative-outside bias in~\gls{tmh}s from single-pass protein datasets.} All flank sizes were set at up to $\pm$20 residues.
+\captionof{figure}[Relative percentage normalisation reveals a negative-outside bias in transmembrane helices from single-pass protein datasets.]{\textbf{Relative percentage normalisation reveals a negative-outside bias in transmembrane helices from single-pass protein datasets.} All flank sizes were set at up to $\pm$20 residues.
 We acknowledge that all values, besides the averaged values, are discrete, and connecting lines are illustrative only.
 On the horizontal axes (a–d) are the distances in residues from the centre of the~\gls{tmh}, with the negative numbers extending towards the cytoplasmic space.
 For (e) and (f), the horizontal axis represents the residue count from the membrane boundary with negative counts into the cytoplasmic space.
@@ -253,7 +253,7 @@ Whereas with UniBacilli, the problem is most likely the dataset size, the except
 \begin{table}[htbp!]
 
     \centering
-    \captionof{table}[Statistical significances for negative charge distribution skew on either side of the membrane in single-pass~\gls{tmh}s]{\textbf{Statistical significances for negative charge distribution skew on either side of the membrane in single-pass~\gls{tmh}s}The “Helices” column refers to the total~\gls{tmh}s contained in each dataset (ExpALL,~\gls{tmh}s from TOPDB~\cite{Dobson2015}; UniHuman, human representative proteome; UniER, human endoplasmic reticulum representative proteome; UniGolgi, human Golgi representative proteome; UniPM, human plasma membrane representative proteome; UniCress, Arabidopsis thaliana (mouse-ear cress) representative proteome; UniFungi, fungal representative proteome; UniBacilli, Bacilli class representative proteome; UniEcoli, Escherichia coli representative proteome; UniArch, Archaea representative proteome; see Methods for details).
+    \captionof{table}[Statistical significances for negative charge distribution skew on either side of the membrane in single-pass transmembrane helices.]{\textbf{Statistical significances for negative charge distribution skew on either side of the membrane in single-pass transmembrane helices.} The “Helices” column refers to the total~\gls{tmh}s contained in each dataset (ExpALL,~\gls{tmh}s from TOPDB~\cite{Dobson2015}; UniHuman, human representative proteome; UniER, human endoplasmic reticulum representative proteome; UniGolgi, human Golgi representative proteome; UniPM, human plasma membrane representative proteome; UniCress, Arabidopsis thaliana (mouse-ear cress) representative proteome; UniFungi, fungal representative proteome; UniBacilli, Bacilli class representative proteome; UniEcoli, Escherichia coli representative proteome; UniArch, Archaea representative proteome; see Methods for details).
 In the ``Database-defined flanks'' column, the ``Negative residues'' column refers to the total number of negative residues found in the $\pm$10 flanking residues on either side of the~\gls{tmh} and does not include residues found in the helix itself.
 In the ``Flanks after central alignment'' column, the ``Negative residues'' column refers to the total number of negative residues found in the –20 to –10 residues and the +10 to +20 residues from the centrally aligned residues of the~\gls{tmh}.
 Unlike the other tables, the global averages are derived from the $\pm$20 datasets.
@@ -300,7 +300,7 @@ When the residue occurrence is normalised by the total occurrence of this residu
 \begin{figure}[!p]
 \centering
 \includegraphics[width=1\textwidth]{NNI_chapter/multi_pass_charge_distribution}
-\captionof{figure}[Negative-outside bias is very subtle in~\gls{tmh}s from multi-pass proteins.]{\textbf{Negative-outside bias is very subtle in~\gls{tmh}s from multi-pass proteins.}The meaning for the horizontal axis is the same as in Figure~\ref{fig:single_pass_charge_distribution}, with the negative sequence position numbers extending towards the cytoplasmic space.
+\captionof{figure}[Negative-outside bias is very subtle in transmembrane helices from multi-pass proteins.]{\textbf{Negative-outside bias is very subtle in transmembrane helices from multi-pass proteins.} The meaning for the horizontal axis is the same as in Figure~\ref{fig:single_pass_charge_distribution}, with the negative sequence position numbers extending towards the cytoplasmic space.
 Leucine is in blue.
 Arginine and lysine are shown in dark and light orange respectively.
 Aspartic and glutamic acid are shown in dark and light purple respectively.
@@ -325,7 +325,7 @@ Thus, there is a positive charge bias towards the cytoplasmic side; yet, it is m
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=1\textwidth]{NNI_chapter/net_charge}
-\captionof{figure}[The net charge across multi-pass and single-pass~\gls{tmh}s shows a stronger positive inside charge in single-pass~\gls{tmh}s than multi-pass~\gls{tmh}s.]{\textbf{The net charge across multi-pass and single-pass~\gls{tmh}s shows a stronger positive inside charge in single-pass~\gls{tmh}s than multi-pass~\gls{tmh}s.}
+\captionof{figure}[The net charge across multi-pass and single-pass transmembrane helices shows a stronger positive inside charge in single-pass transmembrane helices than multi-pass transmembrane helices.]{\textbf{The net charge across multi-pass and single-pass transmembrane helices shows a stronger positive inside charge in single-pass transmembrane helices than multi-pass transmembrane helices.}
 The net charge per~\gls{tmh} plotted at each position; the positive-inside rule is stronger in~\gls{tmh}s from single-pass proteins than~\gls{tmh}s from multi-pass proteins.
 The net charge was calculated at each position as described in the Methods section for the (A) UniHuman and (B) ExpAll datasets.
 Net charge for~\gls{tmh}s from multi-pass proteins is shown in black, and the profile of~\gls{tmh}s from single-pass proteins is drawn in blue.}
@@ -344,7 +344,7 @@ We find that, in all studied conditions, the UniHuman dataset delivers statistic
 
 \begin{table}[htbp]
   \centering
-  \captionof{table}[Statistical significances for negative charge distribution skew on either side of the membrane in multi-pass~\gls{tmh}s]{\textbf{Statistical significances for negative charge distribution skew on either side of the membrane in multi-pass~\gls{tmh}s}
+  \captionof{table}[Statistical significances for negative charge distribution skew on either side of the membrane in multi-pass transmembrane helices.]{\textbf{Statistical significances for negative charge distribution skew on either side of the membrane in multi-pass transmembrane helices.}
 The ``Helices'' column refers to the total~\gls{tmh}s contained in each dataset (ExpALL,~\gls{tmh} from TOPDB~\cite{Dobson2015}; UniHuman, human representative proteome; UniER, human endoplasmic reticulum representative proteome; UniGolgi, human Golgi representative proteome; UniPM, human plasma membrane representative proteome; UniCress, Arabidopsis thaliana (mouse-ear cress) representative proteome, UniFungi, fungal representative proteome; UniBacilli, Bacilli class representative proteome; UniEcoli, Escherichia coli representative proteome; UniArch, Archaea representative proteome; see Methods for details).
 In (A) the ``Database-defined flanks'' and in (B) the ``Database-defined viable* flanks'' and the ``Overlapping flanks'' columns, the ``Negative residues'' column refers to the total number of negative residues found in the $\pm$10 flanking residues on either side of the~\gls{tmh} and does not include residues found in the~\gls{tmh} itself.
 (A) In the ``Flanks after central alignment'' column, the ``Negative residues'' column refers to the total number of negative residues found in the –20 to –10 residues and the +10 to +20 residues from the centrally aligned residues with a maximum database defined flank length of 20 residues.
@@ -448,7 +448,7 @@ The amino acid types were listed on the Y axis according to Kyte \& Doolittle hy
 \begin{figure}[p]
 \centering
 \includegraphics[width=1\textwidth]{NNI_chapter/comp_heatmaps}
-\captionof{figure}[Relative percentage heat-maps from predictive and experimental datasets corroborate residue distribution differences between~\gls{tmh}s from single-pass and multi-pass proteins.]{\textbf{Relative percentage heat-maps from predictive and experimental datasets corroborate residue distribution differences between~\gls{tmh}s from single-pass and multi-pass proteins.}
+\captionof{figure}[Relative percentage heat-maps from predictive and experimental datasets corroborate residue distribution differences between transmembrane helices from single-pass and multi-pass proteins.]{\textbf{Relative percentage heat-maps from predictive and experimental datasets corroborate residue distribution differences between transmembrane helices from single-pass and multi-pass proteins.}
 The residue position aligned to the centre of the~\gls{tmh} is on the horizontal axis, and the residue type is on the vertical axis.
 Amino acid types are listed in order of decreasing hydrophobicity according to the Kyte and Doolittle scale [52].
 The flank lengths in the~\gls{tmh} segments were restricted to up to $\pm$10 residues.
@@ -492,7 +492,7 @@ On the other hand, hydrophobicity differences between~\gls{tmh}s from single- an
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=1\textwidth]{NNI_chapter/hydrophobicity_single_multi}
-\captionof{figure}[There is a difference in the hydrophobic profiles of~\gls{tmh}s from single-pass and multi-pass proteins.]{\textbf{There is a difference in the hydrophobic profiles of~\gls{tmh}s from single-pass and multi-pass proteins.}
+\captionof{figure}[There is a difference in the hydrophobic profiles of transmembrane helices from single-pass and multi-pass proteins.]{\textbf{There is a difference in the hydrophobic profiles of transmembrane helices from single-pass and multi-pass proteins.}
  a The hydrophobicity of single-pass~\gls{tmh}s compared to multi-pass segments from the UniHuman dataset.
 The Kyte and Doolittle scale of hydrophobicity~\cite{Kyte1982} was used with a window length of 3 to compare~\gls{tmh}s from proteins with different numbers of~\gls{tmh}s.
 This scale is based on the water-vapour transfer of free energy and the interior-exterior distribution of individual amino acids.
@@ -510,7 +510,7 @@ We can much more readily reject the hypothesis that hydrophobicity is the same b
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=1\textwidth]{NNI_chapter/hydrophobicity_scale_comparison}
-\captionof{figure}[There is a difference in the hydrophobic profiles of~\gls{tmh}s from single-pass and multi-pass proteins.]{\textbf{There is a difference in the hydrophobic profiles of~\gls{tmh}s from single-pass and multi-pass proteins.}
+\captionof{figure}[There is a difference in the hydrophobic profiles of transmembrane helices from single-pass and multi-pass proteins.]{\textbf{There is a difference in the hydrophobic profiles of transmembrane helices from single-pass and multi-pass proteins.}
 The difference in hydrophobicity between the single-pass and multi-pass datasets stratified by number of~\gls{tmh}s is not due to the choice of scale.
 As with Figure~\ref{fig:hydrophobicity_single_multi}, UniHuman was stratified according to the number of~\gls{tmh}s in each protein.
 The mean amino acid hydrophobicity values of~\gls{tmh}s with a sliding unweighted window of 3 residues from UniHuman proteins at each position were plotted.
@@ -543,7 +543,7 @@ However, leucine of~\gls{tmh}s from UniArch multi-pass proteins have no discerni
 \begin{table}[htbp]
 
   \centering
-  \captionof{table}[Leucines at the inner and outer leaflets of the membrane in TMHs]{\textbf{Leucines at the inner and outer leaflets of the membrane in TMHs}
+  \captionof{table}[Leucines at the inner and outer leaflets of the membrane in  transmembrane helices.]{\textbf{Leucines at the inner and outer leaflets of the membrane in  transmembrane helices.}
   The statistical results when comparing the number of leucine residues from the inner and outer leaflets in each protein in the dataset.
   The number of helices per dataset can be found in Table~\ref{table:acidicresiduesarerare}.
   The Kruskal-Wallis test scores (H statistics) were calculated for leucine residues by comparing the number of leucine residues that were in the inner half of the leaflet with those in the outer half of the leaflet of the database-defined TMH}
@@ -583,7 +583,7 @@ However, leucine of~\gls{tmh}s from UniArch multi-pass proteins have no discerni
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=1\textwidth]{NNI_chapter/dataset_distributions}
-\captionof{figure}[Comparing charged amino acid distributions in~\gls{tmh}s of multi-pass and single-pass proteins across different species and organelles.]{\textbf{Comparing charged amino acid distributions in~\gls{tmh}s of multi-pass and single-pass proteins across different species and organelles.} The relative percentage distribution of charged residues and leucine was calculated at each position in the~\gls{tmh} with flank lengths of $\pm$20 in different datasets.
+\captionof{figure}[Comparing charged amino acid distributions in transmembrane helices of multi-pass and single-pass proteins across different species and organelles.]{\textbf{Comparing charged amino acid distributions in transmembrane helices of multi-pass and single-pass proteins across different species and organelles.} The relative percentage distribution of charged residues and leucine was calculated at each position in the~\gls{tmh} with flank lengths of $\pm$20 in different datasets.
 The distributions are normalised according to relative percentage distribution.
 Aspartic acid and glutamic acid are shown in dark purple and light purple respectively.
 Leucine, the most abundant non-polar residue in~\gls{tmh}s, is in blue.
@@ -628,7 +628,7 @@ To conclude, we find that negative-charge bias distribution is a feature of sing
 \begin{figure}[p]
 \centering
 \includegraphics[height=0.7\textheight]{NNI_chapter/complexity_datasets}
-\captionof{figure}[Comparing the amino acid relative percentage distributions of simple and complex~\gls{tmh}s from single-pass proteins and~\gls{tmh}s from multi-pass proteins.]{\textbf{Comparing the amino acid relative percentage distributions of simple and complex~\gls{tmh}s from single-pass proteins and~\gls{tmh}s from multi-pass proteins.} Comparing the amino acid relative percentage distributions of simple and complex~\gls{tmh}s from single-pass proteins and~\gls{tmh}s from multi-pass proteins.
+\captionof{figure}[Comparing the amino acid relative percentage distributions of simple and complex transmembrane helices from single-pass proteins and transmembrane helices from multi-pass proteins.]{\textbf{Comparing the amino acid relative percentage distributions of simple and complex transmembrane helices from single-pass proteins and transmembrane helices from multi-pass proteins.} Comparing the amino acid relative percentage distributions of simple and complex~\gls{tmh}s from single-pass proteins and~\gls{tmh}s from multi-pass proteins.
 TMSOC was used to calculate which single-pass~\gls{tmh}s were complex and which were simple from ExpAll and UniHuman datasets.
 Simple~\gls{tmh}s are typically anchors without necessarily having other functions (Wong \textit{et al.}~\cite{Wong2010}).
 The relative percentages from single-pass simple (shown in light blue), single-pass complex (red), and multi-pass protein~\gls{tmh}s (black) were plotted for (a, c, e, g, i and k) UniHuman and (b, d, f, h, j and l) ExpAll for (a and b) positive residues, (c and d) negative residues, (e and f) tyrosine, (g and h) tryptophan, (i and j) leucine and (k and l) cysteine.
@@ -652,7 +652,7 @@ Calculations were carried out over single-pass complex, single-pass simple and m
 \begin{table}[htbp]
 
   \centering
-  \captionof{table}[Simple TMHs are less similar than complex TMHs to TMHs from multi-pass proteins in UniHuman]{\textbf{Simple TMHs are less similar than complex TMHs to TMHs from multi-pass proteins in UniHuman}
+  \captionof{table}[Simple transmembrane helices are less similar than complex transmembrane helices to transmembrane helices from multi-pass proteins in UniHuman.]{\textbf{Simple transmembrane helices are less similar than complex transmembrane helices to transmembrane helices from multi-pass proteins in UniHuman.}
   The statistical results were gathered by comparing complex single-pass TMHs, simple TMHs from single-pass proteins and TMHs from multi-pass proteins in UniHuman.
   The abundance of different residues at each position when using the centrally aligned TMH approach was compared with several statistical tests (the~\gls{ks},~\gls{kw} and the $\chi^2$ statistical tests) and the Bahadur slope values of those results}
     \resizebox{\textwidth}{!}{
@@ -739,7 +739,7 @@ Calculations were carried out over single-pass complex, single-pass simple and m
 \begin{table}[htbp]
 
   \centering
-  \captionof{table}[Simple TMHs are less similar than complex TMHs to TMHs from multi-pass proteins in ExpAll]{\textbf{Simple TMHs are less similar than complex TMHs to TMHs from multi-pass proteins in ExpAll}
+  \captionof{table}[Simple transmembrane helices are less similar than complex transmembrane helices to transmembrane helices from multi-pass proteins in ExpAll.]{\textbf{Simple transmembrane helices are less similar than complex transmembrane helices to transmembrane helices from multi-pass proteins in ExpAll.}
   As in Table~\ref{table:unihumanbahadur}, the statistical results were gathered by comparing complex single-pass TMHs, simple TMHs from single-pass proteins and TMHs from multi-pass proteins; however, in this case only ExpAll is used.
   The abundance of different residues at each position when using the centrally aligned TMH approach was compared with several statistical tests (the~\gls{ks},~\gls{kw} and the $\chi^2$ statistical tests) and the Bahadur slope values of those results}
     \resizebox{\textwidth}{!}{
@@ -966,8 +966,8 @@ The leucine asymmetry might be linked to the different lipid composition of eith
 \centering
 \includegraphics[width=1\textwidth]{NNI_chapter/overview}
 \captionof{figure}[Residue distributions of transmembrane anchors.
-A view showing additional residue distribution features that~\gls{tmh}s with an anchorage function display.]{\textbf{Residue distributions of transmembrane anchors.
-A view showing additional residue distribution features that~\gls{tmh}s with an anchorage function display.}a The more classic model of a~\gls{tmh} showing the ``positive-inside'' rule~\cite{VonHeijne1989}, the hydrophobic core~\cite{Kyte1982}, the polar enrichment that flanks the hydrophobic stretch~\cite{Baeza-Delgado2013} and the aromatic belt~\cite{Granseth2005}.
+A view showing additional residue distribution features that transmembrane helices with an anchorage function display.]{\textbf{Residue distributions of transmembrane anchors.
+A view showing additional residue distribution features that transmembrane helices with an anchorage function display.}a The more classic model of a~\gls{tmh} showing the ``positive-inside'' rule~\cite{VonHeijne1989}, the hydrophobic core~\cite{Kyte1982}, the polar enrichment that flanks the hydrophobic stretch~\cite{Baeza-Delgado2013} and the aromatic belt~\cite{Granseth2005}.
 b Simple anchors may display additional features that conform to the membrane biophysical constraints: further suppression of charge in the hydrophobic core (Table \ref{table:acidicresiduesarerare}), intra-membrane leucine asymmetry that likely causes hydrophobic skew~\cite{Sharpe2010} (Table~\ref{table:leucineskewstats}, Figure~\ref{fig:hydrophobicity_single_multi}), a higher preference for cysteine on the inside flanking region (Figure~\ref{fig:complexity_datasets}K and L), a higher net ``positive-inside'' charge (Figure~\ref{fig:net_charge}), asymmetric skew of the hydrophobic belt favouring the inner leaflet interface (Figure~\ref{fig:complexity_datasets}E, F, G, and H) and a negative-outside bias via suppression on the inside flanking region or enrichment on the outside flanking region (Figure~\ref{fig:complexity_datasets}C and D, Tables 2 and 3)}
 
 \label{fig:overview}
@@ -1007,18 +1007,21 @@ The TOPDB database~\cite{Dobson2015} is a manually curated database composed of 
 Experiments include fusion proteins, posttranslational modifications, protease experiments, immunolocalization, chemical modifications as well as revertants, sequence motifs with known mandatory membrane-embedded topologies, and tailoring mutants (Table~\ref{table:topdbevidence}).
 
 \begin{table}[htbp]
-  \tiny
   \centering
 
   \captionof{table}[The experimental evidences of TOPDB.]{\textbf{The experimental evidences of TOPDB.}
   The total number of experimental evidences that contribute to ExpAll according to the TOPDB database (More information at \url{http://topdb.enzim.hu/?m=exptype&mid=14}).
   ``*'' refers to the total number of a subsection being larger than the total of the subcategories, likely due to lack of annotation where ambiguous literature evidence is counted toward the total, but cannot be categorised further.}
-    \resizebox{\textwidth}{!}{
-    \begin{tabular}{cp{5em}cp{5em}}
+%\begin{tiny}
+  %\resizebox{\textwidth}{!}{
+\resizebox{\textwidth}{!}{
+    \begin{tabular}{cccc}
+
     \toprule
-    \multicolumn{2}{p{10em}}{\textbf{Experiment}} & \multicolumn{1}{p{5em}}{\textbf{Bitopic (Single-pass)}} & \textbf{Polytopic (Multi-pass)} \\
+    \multicolumn{2}{c}{\textbf{Experiment}} & \multicolumn{1}{c}{\textbf{Bitopic (Single-pass)}} & \textbf{Polytopic (Multi-pass)} \\
     \midrule
-    \multicolumn{1}{c}{\multirow{13}[26]{*}{\textbf{Fusion}}} & PhoA  & 97    & \multicolumn{1}{c}{2332} \\
+    %\multicolumn{1}{c}{\multirow{13}[26]{*}{\textbf{Fusion}}} & PhoA  & 97    & \multicolumn{1}{c}{2332} \\
+    \multicolumn{1}{c}{\textbf{Fusion}} & PhoA  & 97    & \multicolumn{1}{c}{2332} \\
     \cmidrule{2-4}          & PhoAS & 0     & \multicolumn{1}{c}{90} \\
     \cmidrule{2-4}          & LacZ  & 20    & \multicolumn{1}{c}{433} \\
     \cmidrule{2-4}          & PhoALacZ & 0     & \multicolumn{1}{c}{224} \\
@@ -1030,7 +1033,7 @@ Experiments include fusion proteins, posttranslational modifications, protease e
     \cmidrule{2-4}          & SplitUbiquitin & 0     & \multicolumn{1}{c}{11} \\
     \cmidrule{2-4}          & Suc2  & 0     & \multicolumn{1}{c}{96} \\
     \cmidrule{2-4}          & Other & 1     & \multicolumn{1}{c}{137} \\
-    \cmidrule{2-4}          & Total Fusion & \multicolumn{1}{p{5em}}{316*} & 4600* \\
+    \cmidrule{2-4}          & Total Fusion & \multicolumn{1}{c}{316*} & 4600* \\
     \midrule
     \multicolumn{1}{c}{\multirow{5}[10]{*}{\textbf{PostTransMod}}} & NGlyc & 4634  & \multicolumn{1}{c}{1130} \\
 \cmidrule{2-4}          & Cman  & 0     & \multicolumn{1}{c}{6} \\
@@ -1045,14 +1048,14 @@ Experiments include fusion proteins, posttranslational modifications, protease e
     \midrule
     \multicolumn{1}{c}{\multirow{3}[6]{*}{\textbf{Immunolocalisation}}} & Epitope Insertion & 33    & \multicolumn{1}{c}{313} \\
 \cmidrule{2-4}          & Endogen Epitope & 8     & \multicolumn{1}{c}{41} \\
-\cmidrule{2-4}          & Total Immunolocalisation & \multicolumn{1}{p{5em}}{53*} & 451* \\
+\cmidrule{2-4}          & Total Immunolocalisation & \multicolumn{1}{c}{53*} & 451* \\
     \midrule
     \multicolumn{1}{c}{\multirow{4}[8]{*}{\textbf{Chemical modification}}} & Cys   & 0     & \multicolumn{1}{c}{361} \\
 \cmidrule{2-4}          & Lys   & 0     & \multicolumn{1}{c}{3} \\
 \cmidrule{2-4}          & Quenching & 0     & \multicolumn{1}{c}{2} \\
 \cmidrule{2-4}          & Total Chemical Modification & 0     & 368* \\
     \midrule
-    \multicolumn{1}{p{5em}}{\textbf{Structure}} & PDBTM TMDET & 5968  & \multicolumn{1}{c}{41977} \\
+    \multicolumn{1}{c}{\textbf{Structure}} & PDBTM TMDET & 5968  & \multicolumn{1}{c}{41977} \\
     \midrule
     \multicolumn{1}{c}{\multirow{4}[8]{*}{\textbf{Other}}} & Revertants & 0     & \multicolumn{1}{c}{14} \\
 \cmidrule{2-4}          & SeqMotif & 2     & \multicolumn{1}{c}{32} \\
@@ -1062,7 +1065,7 @@ Experiments include fusion proteins, posttranslational modifications, protease e
     \end{tabular}%
     }
    \label{table:topdbevidence}
-
+%\end{tiny}
 \end{table}%
 
 Length cut-offs for the~\gls{tmh} were set at 16 as the shortest length and 38 as the longest.
@@ -1206,7 +1209,7 @@ Therefore, we also work with alternative datasets (i) with flanks overlapping be
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=1\textwidth]{NNI_chapter/flank_definitions}
-\captionof{figure}[The lengths of flanks and~\gls{tmh}s in multi-pass and single-pass proteins in the UniHuman and ExpAll dataset.]{\textbf{The lengths of flanks and~\gls{tmh}s in multi-pass and single-pass proteins in the UniHuman and ExpAll dataset.}On the horizontal axis are the lengths of the~\gls{tm} segment regions in residues.
+\captionof{figure}[The lengths of flanks and transmembrane helices in multi-pass and single-pass proteins in the UniHuman and ExpAll dataset.]{\textbf{The lengths of flanks and transmembrane helices in multi-pass and single-pass proteins in the UniHuman and ExpAll dataset.}On the horizontal axis are the lengths of the~\gls{tm} segment regions in residues.
 On the vertical axis are the percentages of the population.
 There are three regions: the inside flank, the~\gls{tmh} and the outside flank.
 These regions are acquired according to the~\gls{tmh} boundary of the respective database.
@@ -1265,7 +1268,7 @@ In this case, flanks are the sequence extensions beyond the standardised-length 
 We define the inside flanking segments as the positions -20 to -10 and the outside flanking regions to be +10 to +20 from the central~\gls{tmh} residue (with the label ``0'').
 Instead of emphasising some artificially selected boundary residue, this definition allows the average~\gls{tmh} boundary transition to become apparent.
 
-\subsection{Separating simple and complex single-pass helices.}
+\subsection{Separating simple and complex single-pass helices}
 
 Single-pass helices from ExpAll and UniHuman datasets helices were split into two groups: simple and complex following a previously described classification~\cite{Wong2011,Wong2012} to roughly distinguish simple hydrophobic anchors and~\gls{tmh}s with additional structural/functional roles.
 Simple and complex helices were determined using TMSOC~\cite{Wong2012}.
